fix: update preloader background color for improved visibility

--- a/src/assets/styles/Preloader/Preloader.css
+++ b/src/assets/styles/Preloader/Preloader.css
@@ -5,7 +5,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: #0c0513;
+  background-color: rgb(0, 0, 0);
   display: flex;
   justify-content: center;
   align-items: center;
